--- a/poll/Dockerfile
+++ b/poll/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /app/
 
 RUN pip install -r requirements.txt
 
-ENV DB=redis
+#ENV DB=redis
 EXPOSE 80
 
 CMD [ "flask", "run", "--host=0.0.0.0", "--port=80" ]
