--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -8,7 +8,7 @@ RUN mvn package
 
 FROM openjdk:8-jre-alpine
 #ENV POSTGRES=db
-ENV REDIS=redis
+#ENV REDIS=redis
 # Copy bin from builder to this new image
 COPY --from=builder /usr/src/app/target/worker-jar-with-dependencies.jar /bin/
 # Default command, run app
